# paged-kv-llama

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  README.md  paged_cache.cpp  paged_cache.hpp  paged_cache_c_api.h  render.yaml  run.c
demo/: Dockerfile  README.md
demo/backend/: build_engines.sh  main.py
demo/engines/: run_naive.c
demo/frontend/: index.html  package-lock.json  package.json  vite.config.js
demo/frontend/src/: App.jsx  api.js  main.jsx  theme.js  useEngineStream.js
demo/frontend/src/components/: AboutDialog.jsx  ComparisonStrip.jsx  EnginePanel.jsx  IntroDialog.jsx  LiveSavingsBanner.jsx  PromptBar.jsx
